# src/utils/api/Khronos/week-manager/week-manager-wrapper.ts
@@ -1,9 +1,4 @@
-import {
-	WeekManagerApi,
-	type GetCurrentWeekDetailsRequest,
-	type GetCurrentWeekNumberRequest,
-} from '../../../../openapi/khronos/apis/WeekManagerApi.js';
-import type { SeasonWeekDto } from '../../../../openapi/khronos/index.js';
+import { WeekManagerApi } from '../../../../openapi/khronos/apis/WeekManagerApi.js';
 import { KH_API_CONFIG } from '../KhronosInstances.js';
 
 export default class WeekManagerWrapper {
@@ -11,18 +6,5 @@ export default class WeekManagerWrapper {
 
 	constructor() {
 		this.weekManagerApi = new WeekManagerApi(KH_API_CONFIG);
-	}
-
-	/**
-	 * Retrieve the active week number based upon the sport
-	 */
-	async getActiveWeek(query: GetCurrentWeekNumberRequest): Promise<number> {
-		return await this.weekManagerApi.getCurrentWeekNumber(query);
-	}
-
-	async getActiveWeekDetails(
-		query: GetCurrentWeekDetailsRequest,
-	): Promise<SeasonWeekDto> {
-		return await this.weekManagerApi.getCurrentWeekDetails(query);
 	}
 }
